--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Airbnb</title>
   <link rel="shortcut icon" href="src/img/favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script src="https://use.fontawesome.com/7873633050.js"></script>
   <link rel="stylesheet" href="dist/css/style.min.css">	
 </head>
 <body>
@@ -143,6 +144,129 @@
     </main>
   </section>
 </div>
+<!-- Footer -->
+<footer>
+<div class="divider"></div> <!-- Línea divisora del footer según la página-->
+  <div class="container">
+    <div class="row">
+      <div class="col s12 m3"> 
+        <div class="row">
+          <div class="col s6">
+            <select>
+              <option value="Bahasa Indonesia">Bahasa Indonesia</option>
+              <option value="Bahasa Melayu">Bahasa Melayu</option>
+              <option value="Català">Català</option>
+              <option value="Dansk">Dansk</option>
+              <option value="Deutsch">Deutsch</option>
+              <option value="English">English</option>
+              <option value="Español" selected="selected">Español</option>
+              <option value="Eλληνικά">Eλληνικά</option>
+              <option value="Français">Français</option>
+              <option value="Italiano">Italiano</option>
+              <option value="Magyar">Magyar</option>
+              <option value="Nederlands">Nederlands</option>
+              <option value="Norsk">Norsk</option>
+              <option value="Polski">Polski</option>
+              <option value="Português">Português</option>
+              <option value="Suomi">Suomi</option>
+              <option value="Svenska">Svenska</option>
+              <option value="Türkçe">Türkçe</option>
+              <option value="Íslenska">Íslenska</option>
+              <option value="Čeština">Čeština</option>
+              <option value="Русский">Русский</option>
+              <option value="ภาษาไทย">ภาษาไทย</option>
+              <option value="中文 (简体)">中文 (简体)</option>
+              <option value="中文 (繁體)">中文 (繁體)</option>
+              <option value="日本語">日本語</option>
+              <option value="한국어">한국어</option>
+            </select>
+          </div> 
+          <div class="col s6"> 
+            <select>
+              <option value="AED">AED</option>
+              <option value="ARS">ARS</option>
+              <option value="AUD">AUD</option>
+              <option value="BGN">BGN</option>
+              <option value="BRL">BRL</option>
+              <option value="CAD">CAD</option>
+              <option value="CHF">CHF</option>
+              <option value="CLP" selected="selected">CLP</option>
+              <option value="CNY">CNY</option>
+              <option value="COP">COP</option>
+              <option value="CRC">CRC</option>
+              <option value="CZK">CZK</option>
+              <option value="DKK">DKK</option>
+              <option value="EUR">EUR</option>
+              <option value="GBP">GBP</option>
+              <option value="HKD">HKD</option>
+              <option value="HRK">HRK</option>
+              <option value="HUF">HUF</option>
+              <option value="IDR">IDR</option>
+              <option value="ILS">ILS</option>
+              <option value="INR">INR</option>
+              <option value="JPY">JPY</option>
+              <option value="KRW">KRW</option>
+              <option value="MAD">MAD</option>
+              <option value="MXN">MXN</option>
+              <option value="MYR">MYR</option>
+              <option value="MYR">NOK</option>
+              <option value="MYR">NZD</option>
+              <option value="MYR">PEN</option>
+              <option value="MYR">PHP</option>
+              <option value="MYR">PLN</option>
+              <option value="MYR">RON</option>
+              <option value="MYR">RUB</option>
+              <option value="MYR">SAR</option>
+              <option value="MYR">SEK</option>
+              <option value="MYR">SGD</option>
+              <option value="MYR">THB</option>
+              <option value="MYR">TRY</option>
+              <option value="MYR">TWD</option>
+              <option value="MYR">UAH</option>
+              <option value="MYR">USD</option>
+              <option value="MYR">UYU</option>
+              <option value="MYR">VND</option>
+              <option value="MYR">ZAR</option>
+            </select>
+          </div>
+        </div>
+        <div class="col m3"> <!-- <span> y <a> tiene un fontsize de 15px y font-family:Circular,-apple-system,BlinkMacSystemFont,Roboto,Helvetica Neue,sans-serif -->
+          <span>Airbnb</span>  
+          <a href="#">Acerca de</a>
+          <a href="#">Empleo</a>
+          <a href="#">Prensa</a>
+          <a href="#">Políticas</a>
+          <a href="#">Ayuda</a>
+          <a href="#">Diversidad y sentido de pertenencia</a>
+        </div>
+        <div class="col m3">
+          <span>Descubre Airnbn</span>
+          <a href="#">Confianza y seguridad</a>
+          <a href="#">Crédito para viajar</a>
+          <a href="#">Airbnb Citizen</a>
+          <a href="#">Viajes de negocios</a>
+          <a href="#">Guías</a>
+        </div>
+        <div class="col m3">
+          <span>Hospedar</span>
+          <a href="#">Razones para hospedar</a>
+          <a href="#">Hospitalidad</a>
+          <a href="#">Ser un anfitrión responsable</a>
+        </div>
+      </div>
+    </div>
+    <div class="footer-copyright">
+      <div class="container">
+        <span> <img src="src/img/favicon.ico" alt="logo"> © Airbnb, Inc.</span>
+        <a class="grey-text right" href="#!">Términos y Privacidad</a>
+        <a class="grey-text text-lighten-4 right" href="#!">Mapa del Sitio</a>
+        <a class="grey-text right" href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+        <a class="grey-text right" href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+        <a class="grey-text right" href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+      </div>
+    </div>
+  </div>
+</footer>
 <script type="text/javascript" src="node_modules/jquery/dist/jquery.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
 <script type="text/javascript" src="dist/js/script.min.js"></script>
