--- a/index.html
+++ b/index.html
@@ -2,17 +2,337 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">	
-    <title>Airbnb</title>
-    <link rel="shortcut icon" href="src/img/favicon.ico">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="src/css/main.css">	
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">    
+	<title>Airbnb</title>
+	<link rel="shortcut icon" href="src/img/favicon.ico">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link rel="stylesheet" href="dist/css/style.min.css">   
 </head>
 <body>
+	<!--header-->
+	<header>
+		<div>
+			<div class="row">
+				<div class="text col s12">
+					<p>Introduce las fechas para ver el precio total. Ten en cuenta que se aplicarán tarifas adicionales y es posible que se añadan impuestos.
+					</p>
+				</div>  
+			</div>  
+		</div>
+	</header>
+	<!--section -->
+	<section>
+		<div class="row">
+			<div class="col s6">                
+				<div class="fotos">
+					<ul>
+						<li>
+							<img class="responsive-img" src="src/img/foto1.png" alt="">
+							<p class="title">
+								<span>$ 10.800 CLP </span>
+								<a class="waves-effect waves-light btn">Nuevo</a>
+							</p>
+							<span class="info">
+								<h5>
+									Departamento pleno centro histórico.
+								</h5>
+								<p>
+									Casa/apto. entero 3 camas 5 huéspedes
+								</p>
+							</span>                         
+						</li>  
+						<li>
+							<img class="responsive-img" src="src/img/foto2.png" alt="">
+							<p class="title">
+								<span>$ 12.500 CLP </span>
+								<span class="rating">
+									<span>
+										<i class="tiny material-icons">star</i>
+										<i class="tiny material-icons">star</i>
+										<i class="tiny material-icons">star</i>
+										<i class="tiny material-icons">star_border</i>
+										<i class="tiny material-icons">star_border</i>
+										3 evaluaciones
+									</span>
+							</p>
+							<span class="info">
+								<h5>
+									Santiago centro, metro, wifi.
+								</h5>
+								<p>
+									Casa/apto. 1 cama, 2 huéspedes
+								</p>
+							</span>
+						</span>                          
+						</li>
+						<li>
+							<img class="responsive-img" src="src/img/foto3.png" alt="">
+							<p class="title">
+								<span>$ 21.600 CLP </span>    
+								<span class="rating">
+									<span>
+										<i class="tiny material-icons">star</i>
+										<i class="tiny material-icons">star</i>
+										<i class="tiny material-icons">star</i>
+										<i class="tiny material-icons">star</i>
+										<i class="tiny material-icons">star_border</i>
+										4 evaluaciones
+									</span>
+									<span class="info">
+										<h5>
+											Departamento Valparaiso año nuevo.
+										</h5>
+										<p>
+											Casa/apto. 4 camas dobles, 6 huéspedes
+										</p>
+									</span>   
+								</span> 
+							</p>                        
+						</li>
+						<li>
+							<img class="responsive-img" src="src/img/foto4.png" alt="">
+							<p class="title">
+								<span>$ 25.500 CLP </span>
+								<a class="waves-effect waves-light btn">Nuevo</a>
+								<span class="info">
+									<h5>
+										Departamento pleno centro histórico.
+									</h5>
+									<p>
+										Casa/apto. entero 3 camas 5 huéspedes
+									</p>
+								</span>  
+							</p>                        
+						</li>
+						<li>
+							<img class="responsive-img" src="src/img/foto5.png" alt="">
+							<p class="title">
+								<span>$ 31.800 CLP </span>
+								<span class="rating">
+									<span>
+										<i class="tiny material-icons">star</i>
+										<i class="tiny material-icons">star</i>
+										<i class="tiny material-icons">star</i>
+										<i class="tiny material-icons">star_border</i>
+										<i class="tiny material-icons">star_border</i>
+										3 evaluaciones
+									</span>
+									<span class="info">
+										<h5>
+											Departamento Providencia.
+										</h5>
+										<p>
+											Casa/apto. 3 dormitorios, 1 baño 1 concina
+										</p>
+									</span>  
+								</span> 
+							</p>                       
+						</li>
+						<li>
+							<img class="responsive-img" src="src/img/foto6.png" alt="">
+							<p class="title">
+								<span>$ 35.400 CLP </span>
+								<span class="rating">
+									<span>
+										<i class="tiny material-icons">star</i>
+										<i class="tiny material-icons">star</i>
+										<i class="tiny material-icons">star</i>
+										<i class="tiny material-icons">star_border</i>
+										<i class="tiny material-icons">star_border</i>
+										3 evaluaciones
+									</span>
+									<span class="info">
+										<h5>
+											Casa novena región.
+										</h5>
+										<p>
+											Casa/apto. 8 camas 8 huéspedes, wifi, cocina compartida.
+										</p>
+									</span>  
+								</p>
+							</span>                         
+						</li>
+					</ul>
+				</div>
+			</div>
+
+			<li>
+				<img class="responsive-img" src="src/img/foto7.png" alt="">
+				<p class="title">
+					<span>$ 11.600 CLP </span>
+					<a class="waves-effect waves-light btn">Nuevo</a>
+				</p>
+				<span class="info">
+					<h5>
+						Departamento pleno centro histórico.
+					</h5>
+					<p>
+						Casa/apto. entero 3 camas 5 huéspedes
+					</p>
+				</span>                         
+			</li>  
+			<li>
+				<img class="responsive-img" src="src/img/foto8.png" alt="">
+				<p class="title">
+					<span>$ 13.100 CLP </span>
+					<span class="rating">
+						<span>
+							<i class="tiny material-icons">star</i>
+							<i class="tiny material-icons">star</i>
+							<i class="tiny material-icons">star</i>
+							<i class="tiny material-icons">star_border</i>
+							<i class="tiny material-icons">star_border</i>
+							3 evaluaciones
+						</span>
+					</p>
+					<span class="info">
+						<h5>
+							Santiago centro, metro, wifi.
+						</h5>
+						<p>
+							Casa/apto. 1 cama, 2 huéspedes
+						</p>
+					</span>
+				</span>                          
+			</li>
+			<li>
+				<img class="responsive-img" src="src/img/foto9.png" alt="">
+				<p class="title">
+					<span>$ 20.500 CLP </span>    
+					<span class="rating">
+						<span>
+							<i class="tiny material-icons">star</i>
+							<i class="tiny material-icons">star</i>
+							<i class="tiny material-icons">star</i>
+							<i class="tiny material-icons">star</i>
+							<i class="tiny material-icons">star_border</i>
+							4 evaluaciones
+						</span>
+						<span class="info">
+							<h5>
+								Departamento Valparaiso año nuevo.
+							</h5>
+							<p>
+								Casa/apto. 4 camas dobles, 6 huéspedes
+							</p>
+						</span>   
+					</span> 
+				</p>                        
+			</li>
+			<li>
+				<img class="responsive-img" src="src/img/foto10.png" alt="">
+				<p class="title">
+					<span>$ 23.200 CLP </span>
+					<a class="waves-effect waves-light btn">Nuevo</a>
+					<span class="info">
+						<h5>
+							Departamento pleno centro histórico.
+						</h5>
+						<p>
+							Casa/apto. entero 3 camas 5 huéspedes
+						</p>
+					</span>  
+				</p>                        
+			</li>
+			<li>
+				<img class="responsive-img" src="src/img/foto11.png" alt="">
+				<p class="title">
+					<span>$ 40.800 CLP </span>
+					<span class="rating">
+						<span>
+							<i class="tiny material-icons">star</i>
+							<i class="tiny material-icons">star</i>
+							<i class="tiny material-icons">star</i>
+							<i class="tiny material-icons">star_border</i>
+							<i class="tiny material-icons">star_border</i>
+							3 evaluaciones
+						</span>
+						<span class="info">
+							<h5>
+								Departamento Providencia.
+							</h5>
+							<p>
+								Casa/apto. 3 dormitorios, 1 baño 1 concina
+							</p>
+						</span>  
+					</span> 
+				</p>                       
+			</li>
+			<li>
+				<img class="responsive-img" src="src/img/foto12.png" alt="">
+				<p class="title">
+					<span>$ 60.400 CLP </span>
+					<span class="rating">
+						<span>
+							<i class="tiny material-icons">star</i>
+							<i class="tiny material-icons">star</i>
+							<i class="tiny material-icons">star</i>
+							<i class="tiny material-icons">star_border</i>
+							<i class="tiny material-icons">star_border</i>
+							3 evaluaciones
+						</span>
+						<span class="info">
+							<h5>
+								Casa novena región.
+							</h5>
+							<p>
+								Casa/apto. 8 camas 8 huéspedes, wifi, cocina compartida.
+							</p>
+						</span>  
+					</p>
+				</span>                         
+			</li>
+		</div>
+	</section>
+
+	
+
+	<!-- footer -->
+
+	<div>
+		<hr>
+			<p> 1 - 12 de 80 anuncios</p>
+			<ul class="pagination">
+    			<li class="disabled"><a href="#!">
+    				<i class="material-icons">chevron_left</i></a></li>
+    				<li class="active"><a href="#!">1</a></li>
+				    <li class="waves-effect"><a href="#!">2</a></li>
+				    <li class="waves-effect"><a href="#!">3</a></li>
+				    <li class="waves-effect"><a href="#!">4</a></li>
+				    <li class="waves-effect"><a href="#!">...</a></li>
+				    <li class="waves-effect"><a href="#!">10</a></li>
+				    <li class="waves-effect"><a href="#!">11</a></li>
+				    <li class="waves-effect"><a href="#!">12</a></li>
+				    <li class="waves-effect"><a href="#!">
+				 	<i class="material-icons">chevron_right</i></a>
+				</li>
+ 			</ul>
 
 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
 
+
+		<hr>
+
+		<p>
+			Chile - Región Metropolitana de Santiago - Santiago
+		</p>
+	</div>
+
+
+
+
+
+</section>
+
+
+
+
+
+
+
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
+<script type="text/javascript" src="dist/"></script>
 </body>
 </html>
