added search busqueda.html

--- a/busqueda.html
+++ b/busqueda.html
@@ -16,6 +16,7 @@
       <div class="nav-wrapper">
       <a href="#" data-activates="slide-out" class="button-collapse right"><i class="material-icons hamb">menu</i></a>
       <a href="index.html"><img src="src/img/favicon.ico"></a>
+      <input class="input-search" type="search" placeholder="Destino, Ciudad, Dirección">
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li><a href="#">Conviértete en anfitrión</a></li>
           <li><a href="#">Ayuda</a></li>
