se agrego fotos circulos y color corazon

--- a/busqueda.html
+++ b/busqueda.html
@@ -161,6 +161,7 @@
                   <i class="material-icons heart">&#xE87E;</i>
                   <div class="dest">s/·6905 <span>Por mes</span></div>
                   <img class="responsive-img" src="src/img/foto1.png" alt="">
+                  <img src="src/img/cara1.png" alt="" class="cara circle responsive-img">
             </div>
             <div class="row">
               <div class="col m3 col s3 center-align">
@@ -188,6 +189,7 @@
                   <i class="material-icons heart">&#xE87E;</i>
                   <div class="dest">s/·9490 <span>Por mes</span></div>
                   <img class="responsive-img" src="src/img/foto2.png" alt="">
+                  <img src="src/img/cara2.png" alt="" class="cara circle responsive-img">
             </div>
             <div class="row">
               <div class="col m12 col s12">
@@ -215,6 +217,7 @@
                   <i class="material-icons heart">&#xE87E;</i>
                   <div class="dest">s/·11259 <span>Por mes</span></div>
                   <img class="responsive-img" src="src/img/foto3.png" alt="">
+                  <img src="src/img/cara2.png" alt="" class="cara circle responsive-img">
             </div>
             <div class="row">
               <div class="col m12 col s12">
@@ -239,6 +242,7 @@
                   <i class="material-icons heart">&#xE87E;</i>
                   <div class="dest">s/·11709 <span>Por mes</span></div>
                   <img class="responsive-img" src="src/img/foto4.png" alt="">
+                  <img src="src/img/cara1.png" alt="" class="cara circle responsive-img">
             </div>
             <div class="row">
               <div class="col m3 col s3 center-align">
@@ -268,6 +272,7 @@
                   <i class="material-icons heart">&#xE87E;</i>
                   <div class="dest">s/·15287 <span>Por mes</span></div>
                   <img class="responsive-img" src="src/img/foto5.png" alt="">
+                  <img src="src/img/cara2.png" alt="" class="cara circle responsive-img">
             </div>
             <div class="row">
               <div class="col m3 col s3 center-align">
@@ -295,6 +300,7 @@
                   <i class="material-icons heart">&#xE87E;</i>
                   <div class="dest">s/·6709 <span>Por mes</span></div>
                   <img class="responsive-img" src="src/img/foto6.png" alt="">
+                  <img src="src/img/cara1.png" alt="" class="cara circle responsive-img">
             </div>
             <div class="row">
               <div class="col m3 col s3 center-align">
