--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
   </section>
         <div class="titulo">Experiencias</div>
   </div>
+    <!-- CARRUSEL EXPERIENCIAS -->
   <section class="container2">
     <main id='slider'>
       <button class='trigger prev'></button>
@@ -151,7 +152,146 @@
       </section>
     </main>
   </section>
-</div>
+    <!-- CARRUSEL CASAS -->
+    <div class="container">
+    <div class="titulo">Alojamientos</div>
+    </div>
+    <section class="container2">
+    <main id='slider2'>
+      <button class='trigger2 prev2'></button>
+      <button class='trigger2 next2'></button>
+      <section class='frame2'>
+        <article class='item2'>
+          <div class='inset2'>
+            <div class='caption2'><img src="src/img/paisaje1.jpg">
+              <div class="bajada"><span>$150633 CLP </span>Casa/apto. entero en Tyringham</div>
+              <div class="estrellas"><span>☆☆☆☆☆</span> 141 evaluaciones</div>
+            </div>
+          </div>
+        </article>
+        <article class='item2'>
+          <div class='inset2'>
+            <div class='caption2'><img src="src/img/paisaje2.jpg">
+              <div class="bajada"><span>$150633 CLP </span>Casa/apto. entero en Tyringham</div>
+              <div class="estrellas"><span>☆☆☆☆☆</span> 141 evaluaciones</div>
+            </div>
+          </div>
+        </article>
+        <article class='item2'>
+          <div class='inset2'>
+            <div class='caption2'><img src="src/img/paisaje3.jpg">
+              <div class="bajada"><span>$150633 CLP </span>Casa/apto. entero en Tyringham</div>
+              <div class="estrellas"><span>☆☆☆☆☆</span> 141 evaluaciones</div>
+            </div>
+          </div>
+        </article>
+        <article class='item2'>
+          <div class='inset2'>
+            <div class='caption2'><img src="src/img/paisaje4.jpg">
+              <div class="bajada"><span>$150633 CLP </span>Casa/apto. entero en Tyringham</div>
+              <div class="estrellas"><span>☆☆☆☆☆</span> 141 evaluaciones</div>
+            </div>
+          </div>
+      </section>
+    </main>
+  </section>
+  <!-- CARRUSEL PAISES -->
+    <div class="container">
+    <div class="titulo">Destinos destacados</div>
+    </div>
+    <section class="container2">
+    <main id='slider3'>
+      <button class='trigger3 prev3'></button>
+      <button class='trigger3 next3'></button>
+      <section class='frame3'>
+        <article class='item3'>
+          <div class='inset3'>
+            <div class='caption3'><img src="src/img/pais1.jpg">
+              <div class="bajada"><span>London</span></div>
+            </div>
+          </div>
+        </article>
+        <article class='item3'>
+          <div class='inset3'>
+            <div class='caption3'><img src="src/img/pais2.jpg">
+              <div class="bajada"><span>Paris</span></div>
+            </div>
+          </div>
+        </article>
+        <article class='item3'>
+          <div class='inset3'>
+            <div class='caption3'><img src="src/img/pais3.jpg">
+              <div class="bajada"><span>Firenze</span></div>
+            </div>
+          </div>
+        </article>
+        <article class='item3'>
+          <div class='inset3'>
+            <div class='caption3'><img src="src/img/pais4.jpg">
+              <div class="bajada"><span>La Habana</span></div>
+            </div>
+          </div>
+        </article>
+        <article class='item3'>
+          <div class='inset3'>
+            <div class='caption3'><img src="src/img/pais5.jpg">
+              <div class="bajada"><span>Los Angeles</span></div>
+            </div>
+          </div>
+        </article>
+        <article class='item3'>
+          <div class='inset3'>
+            <div class='caption3'><img src="src/img/pais6.jpg">
+              <div class="bajada"><span>Detroit</span></div>
+            </div>
+          </div>
+        </article>
+        <article class='item3'>
+          <div class='inset3'>
+            <div class='caption3'><img src="src/img/pais7.jpg">
+              <div class="bajada"><span>San Francisco</span></div>
+            </div>
+          </div>
+        </article>
+        <article class='item3'>
+          <div class='inset3'>
+            <div class='caption3'><img src="src/img/pais8.jpg">
+              <div class="bajada"><span>Japon</span></div>
+            </div>
+          </div>
+        </article>
+        <article class='item3'>
+          <div class='inset3'>
+            <div class='caption3'><img src="src/img/pais9.jpg">
+              <div class="bajada"><span>Cape Town</span></div>
+            </div>
+          </div>
+        </article>
+        <article class='item3'>
+          <div class='inset3'>
+            <div class='caption3'><img src="src/img/pais10.jpg">
+              <div class="bajada"><span>Seúl</span></div>
+            </div>
+          </div>
+        </article>
+        <article class='item3'>
+          <div class='inset3'>
+            <div class='caption3'><img src="src/img/pais11.jpg">
+              <div class="bajada"><span>Nairobi</span></div>
+            </div>
+          </div>
+        </article>
+        <article class='item3'>
+          <div class='inset3'>
+            <div class='caption3'><img src="src/img/pais12.jpg">
+              <div class="bajada"><span>Miami</span></div>
+            </div>
+          </div>
+        </article>
+      </section>
+    </main>
+  </section>
+
 <!-- Footer -->
 <div class="divider"></div>
 <footer>
