--- a/busqueda.html
+++ b/busqueda.html
@@ -7,7 +7,7 @@
   <title>Airbnb</title>
   <link rel="shortcut icon" href="src/img/favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.min.css"> 
+  <link rel="stylesheet" href="dist/css/style.min.css"> 
 </head>
 <body>
   <!-- NAVBAR -->
@@ -606,6 +606,6 @@
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC4lPDRoY76DXNqlEhmedbGbxbNBuLd8mI&libraries=places&callback=initMap"
         async defer></script>
 <script type="text/javascript" src="js/script.min.js"></script>
-<script type="text/javascript" src="src/js/mapa.js"></script>
+<script type="text/javascript" src="dist/js/script.min.js"></script>
 </body>
 </html>
