--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
   <link rel="shortcut icon" href="src/img/favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="https://use.fontawesome.com/7873633050.js"></script>
-  <link rel="stylesheet" href="css/style.min.css"> 
+  <link rel="stylesheet" href="dist/css/style.min.css"> 
 </head>
 <body>
   <header>
     <nav>
       <div class="nav-wrapper">
       <a href="#" data-activates="slide-out" class="button-collapse right"><i class="material-icons hamb">menu</i></a>
-      <a href="index.html"><img src="../src/img/favicon"></a>
+      <a href="index.html"><img src="src/img/favicon.ico"></a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li><a href="#">Conviértete en anfitrión</a></li>
           <li><a href="#">Ayuda</a></li>
-          <li><a href="#">Regístrate</a></li> 
+          <li><a href="#">Regístrate</a></li>
           <li><a href="#">Iniciar sesión</a></li>
         </ul>
       </div>
@@ -32,14 +32,14 @@
     </ul>
   </header>
   <!-- SECCION CAROUSEL -->
-  <section> 
+  <section>
    <div class="main">
     <div class="slider-outer">
       <div class="slider">
-        <div class="slide-item"><span class="slide-image" style="background-image: url(../src/img/Captura1.jpg);"></span></div>
-        <div class="slide-item"><span class="slide-image" style="background-image: url(../src/img/Captura2.jpg);"></span></div>
-        <div class="slide-item"><span class="slide-image" style="background-image: url(../src/img/Captura3.jpg);"></span></div>
-        <div class="slide-item"><span class="slide-image" style="background-image: url(../src/img/Captura4.jpg);"></span></div>
+        <div class="slide-item"><span class="slide-image" style="background-image: url(src/img/Captura1.jpg);"></span></div>
+        <div class="slide-item"><span class="slide-image" style="background-image: url(src/img/Captura2.jpg);"></span></div>
+        <div class="slide-item"><span class="slide-image" style="background-image: url(src/img/Captura3.jpg);"></span></div>
+        <div class="slide-item"><span class="slide-image" style="background-image: url(src/img/Captura4.jpg);"></span></div>
       </div>
     </div>
   </div>
@@ -431,6 +431,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC4lPDRoY76DXNqlEhmedbGbxbNBuLd8mI&libraries=places&callback=initAutocomplete"
         async defer></script>
-<script type="text/javascript" src="js/script.min.js"></script>
+<script type="text/javascript" src="dist/js/script.min.js"></script>
 </body>
 </html>
