--- a/index.html
+++ b/index.html
@@ -427,8 +427,8 @@
 
   </div>
 </footer>
-<script type="text/javascript" src="node_modules/jquery/dist/jquery.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/core.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/js/materialize.min.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC4lPDRoY76DXNqlEhmedbGbxbNBuLd8mI&libraries=places&callback=initAutocomplete"
         async defer></script>
 <script type="text/javascript" src="dist/js/script.min.js"></script>
